# Eratosthenes

./: .gitignore  README.md  config.py  config.py.sample  conn.py  eratostene.py  eratosthenes.py  go.mod  go.sum  indexer.py  models.py  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: go.yml  test.yml
cmd/eratosthenes/: main.go
internal/assets/: embed.go
internal/assets/templates/: 404.html  base.html  index.html  package.html  search.html
internal/cli/: commands.go  handlers.go
internal/config/: config.go
internal/db/: db.go
internal/indexer/: indexer.go
internal/models/: package.go
internal/modules/web/: home.go  package.go  render.go  search.go
static/css/: fabr-custom.css  fonts.css  index.css  style.css
static/js/: fabr.min.js
templates/: 404.html  base.html  index.html  package.html  search.html  search_form.html
