[tool.poetry]
name = "eratosthenes"
version = "0.1.0"
description = "Eratosthenes is an APT repository browser and indexer, designed for Vanilla OS."
authors = ["Mirko Brombin <send@mirko.pm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
requests = "^2.31.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.6"
idna = "^3.4"
itsdangerous = "^2.1.2"
MarkupSafe = "^2.1.3"
SQLAlchemy = "^2.0.19"
typing-extensions = "^4.7.1"
urllib3 = "^2.0.4"
Werkzeug = "^2.3.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
